# internal/model/comment.go
@@ -12,7 +12,7 @@ type Comment struct {
 	UserID       uuid.UUID `gorm:"type:uuid;not null" json:"user_id"`
 	SubmissionID uuid.UUID `gorm:"type:uuid;not null" json:"submission_id"`
 	Content      string    `gorm:"type:text;not null" json:"content"`
-	CreatedAt    time.Time `json:"created_at"`
-	UpdatedAt    time.Time `json:"updated_at"`
+	CreatedAt    time.Time `json:"createdAt" gorm:"column:created_at;autoCreateTime:true"`
+	UpdatedAt    time.Time `json:"updatedAt" gorm:"column:updated_at;autoUpdateTime:true"`
 	DeletedAt    gorm.DeletedAt
 }
